<resources>
    <string name="app_name">FreeRide</string>
    <string name="title_activity_map">Map</string>

    <string name="no_geocoder_available">Service not available</string>
    <string name="load_location_error">Something went wrong. Please try again.</string>
    <string name="no_search_results">There are no results for your search</string>
    <string name="action_search">Пошук</string>
    <string name="action_repeat">Повторити</string>


    <string name="search_hint">Куди прямуєте?</string>

    <!--Sync-->
    <string name="loading_error">Не завантажено</string>
    <string name="error_no_data">Відсутні дані!</string>
    <string name="error_data_server">Помилка обробки даних на сервері!</string>
    <string name="error_retrieving_data">Помилка отримання даних!</string>
    <string name="error_sending_data">Помилка віправки даних!</string>
    <string name="error_internet_connecting">Відсутне з\'єднання з інтернетом!</string>
    <string name="error_sync">Помилка запиту</string>
    <string name="error_400">Передано не вірний параметер</string>
    <string name="error_401">Користувач не авторизований</string>
    <string name="error_404">Помилка запиту</string>
    <string name="error_500">Помилка серверу</string>


    <string name="error_field_required">Ці данні являються обов\'язковими</string>

    <!--Location-->
    <string name="error_location">Помилка навігаціі</string>
    <string name="google_map_permission">Дозволити додатку використовувати Google карти?</string>

    <!--AlertDialog-->
    <string name="questions_exit">Ви впевнені, що хочете вийти?</string>
    <string name="questions_save_changes">Зберегти зміни?</string>
    <string name="questions_select_element">Вибрати елемент?</string>
    <string name="questions_title_info">Інфо</string>
    <string name="questions_answer_yes">Так</string>
    <string name="questions_answer_save">Зберегти</string>
    <string name="questions_answer_no">Ні</string>
    <string name="questions_answer_cancel">Відмінити</string>
    <string name="questions_answer_ok">Ок</string>
    <string name="questions_title_question">Питання</string>
    <string name="questions_title_error">Помилка</string>
    <string name="questions_title_successful">Успішно</string>
    <string name="questions_select_from_list">Виберіть зі списку</string>
    <string name="questions_review_place">Як ви оцінюєте доступність об\'єкту?</string>
    <string name="questions_review_comment">Залиште коментар</string>
    <string name="available">Доступний</string>
    <string name="troublesome">Проблемний</string>
    <string name="inaccessible">Недоступний</string>
    <string name="rate_later">Оцінити пізніше</string>
    <string name="rate_leave">Продовжити</string>
    <string name="ratings_not_have">Немає оцінок</string>
    <string name="unknown_object">Невідомий об\'єкт</string>
    <string name="ratings">Oцінок</string>
    <string name="object_text">об\'єкт</string>
    <string name="ratings_users">Оцінки користувачів</string>
    <string name="list_review_empty_text1">Поки немає оцінок</string>
    <string name="list_review_empty_text2">Допоможіть оцінити об\'єкт</string>
    <string name="successfully">Успішно</string>
    <string name="rating_added">Дякуємо, Ваша думка важлива для нас</string>
    <string name="guest">Гість</string>

    <string name="leave_comment">Залиште коментар</string>
    <string name="leave_comment_example">Наприклад ( відсутні пандуси…)</string>
    <string name="leave_comment_miss">Пропустити</string>

    <string name="add_review">Оцінити об\'єкт</string>
    <string name="route">Маршрут</string>

    <!--Login-->
    <string name="registration">Реєстрація</string>
    <string name="question_not_registered">Ще не зареєстровані? </string>
    <string name="question_forgot_password">Забули пароль?</string>
    <string name="facebook_login">Вхід через Facebook</string>
    <string name="email_login">Вхід через EMAIL</string>
    <string name="login">Вхід</string>
    <string name="login_email">Вхід через e-mail</string>
    <string name="enter_login_email">Ваша електронна пошта</string>
    <string name="enter_login_password">Пароль</string>
    <string name="action_enter">Увійти</string>
    <string name="enter_name">Ваше ім\'я</string>
    <string name="create_password">Створіть пароль</string>
    <string name="restoring_access">Відновлення доступу</string>
    <string name="enter_email_for_change_pass">Для зміни паролю вкажіть Вашу електроннну пошту</string>
    <string name="action_send">Надіслати</string>

</resources>
