<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorSearchBackground">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/review_background"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/questions_review_place"
            android:theme="@style/TextStyle_Standart_Accent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBackground"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/review_circle_size"
                    android:layout_height="@dimen/review_circle_size"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_review_available" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/available"
                    android:textAllCaps="true"
                    android:theme="@style/TextStyle_Standart_Bold_Accent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/troublesome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/review_circle_size"
                    android:layout_height="@dimen/review_circle_size"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_review_troublesome" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/troublesome"
                    android:textAllCaps="true"
                    android:theme="@style/TextStyle_Standart_Bold_Accent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inaccessible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/review_circle_size"
                    android:layout_height="@dimen/review_circle_size"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_review_inaccessible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/inaccessible"
                    android:textAllCaps="true"
                    android:theme="@style/TextStyle_Standart_Bold_Accent" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBackground"/>

        <TextView
            android:id="@+id/rateLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_later"
            android:gravity="center"
            android:theme="@style/TextStyle_Standart_ElectricBlue"
            android:padding="10dp"
            android:layout_margin="10dp"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>