<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/electricBlue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
                android:id="@+id/viewBanner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_banner_height"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/banner_small"
                android:layout_marginTop="@dimen/login_banner_margin_top">
        </View>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/viewBanner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

            <Button
                    android:text="@string/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_load_height"
                    android:id="@+id/loginEmail"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:layout_margin="3dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    style="@style/button_white_style"/>

            <Button
                android:text="@string/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_load_height"
                android:id="@+id/loginFacebook"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_margin="3dp"
                android:drawableLeft="@drawable/ic_facebook"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                style="@style/button_electric_blue_style"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextStyle_Standart_OrangeYellow"
                    android:text="@string/question_not_registered"
                    android:gravity="center"
                    android:padding="5dp"/>
            <Button
                    android:text="@string/registration"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_load_height"
                    android:id="@+id/registrationBtn"
                    android:gravity="center"
                    android:layout_margin="3dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    style="@style/button_white_style"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
