<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/electricBlue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:src="@drawable/ic_no_photo"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/logoImage"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextInpitLayoutLabel">

                <EditText
                        android:id="@+id/regEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="17"
                        android:hint="@string/enter_login_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        style="@style/TextStyle_Standart_White_EditText" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextInpitLayoutLabel">

                <EditText
                        android:id="@+id/regName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        style="@style/TextStyle_Standart_White_EditText" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintTextAppearance="@style/TextInpitLayoutLabel"
                    android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/regPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        style="@style/TextStyle_Standart_White_EditText" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp">

            <Button
                    android:text="@string/facebook_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginFacebook"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    style="@style/button_electric_blue_style"/>

            <Button
                    android:text="@string/action_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginBtn"
                    android:gravity="center"
                    android:layout_margin="3dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="false"
                    style="@style/button_white_style"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
